		to streams and logs.
	Modifications to SPEA2Subpopulation to read and write the archive size
		when writing subpopulations
	Added T_INTEGER and T_CHARACTER to Code
	Added several methods to Code to simplify reading from files.  Modified
		much existing code to use the Code methods instead of 
		rolling their own.  One unfortunate affect of this is that Code
		now longer is independent of EvolutionState.  Perhaps we might
		make a utility class instead.
	Moved ec/multiobjective/spea/package.html to a README file
	Subpopulations now initialize via loading from files using the new
		file loading code.
	Updates to MersenneTwister and MersenneTwisterFast
	Small setup() fix to VectorSpecies -- wasn't looking up default 
		parameter for crossover type.  Thanks to Michael Orlov
		<orlovm@cs.bgu.ac.il>
	Added indent to make dist
	Added setGenomeLength(...) to VectorIndividuals
	Incorrect parameter (P_PROB instead of P_PROBABILITY) fixed in
		ProportionalTournamentSelection.  Thanks to Robert Baruch
		<autophile@zoominternet.net>

17 Let's get ready to PRERELEASE!
	Deleted some /tmp/out writing crud in ecsuite
	Bug Fix: reading/writing Subpopulations potentially tried to ask
		null individuals to read themselves, and forgot to write out
		a preamble.  Thanks to Tibi Simu <Tiberiu.Simu@ucd.ie>
	Small crossover type parameter bug fixed, and printout error in
		FloatVectorSpecies fixed.  Thanks to Elena Popovici
		<epopovici@gmu.edu>
	tutorial2 and tutorial3 missing fitness parameter declarations.
		Thanks to Rick van Krevelen <krevelen@cs.vu.nl>
	documentation fix (a </ul>) to Prototype which should keep the
		class documentation of all prototypes from getting incorrectly
		indented.
	Added Elena Popovici to the author's list
	Tweaked the post-tutorial discussion
	Updated Mersenne Twister to include SerialVersionUIDs to quiet
		compiler warnings in JDK 1.6
	Minor documentation bug fix.  Thanks to Ian Lindsay
		<iml04@hampshire.edu>	